pom-sema/src/lowering/snapshots/fn_scopes.snap
---
source: pom-sema/src/lowering/tests.rs
expression: "test(r#\"\na: fn = {\n    b := 55;\n    c := b + b;\n};\n\"#)"
---
(
    Ir {
        items: [
            Id<Stmt>(3),
        ],
        stmts: Arena(
            [
                Stmt {
                    kind: Bind(
                        Bind {
                            sym: Id<Sym>(2),
                            lhs: Id<Expr>(2),
                            rhs: Some(
                                Id<Expr>(1),
                            ),
                        },
                    ),
                    span: Span {
                        start: 15,
                        end: 23,
                    },
                },
                Stmt {
                    kind: Bind(
                        Bind {
                            sym: Id<Sym>(3),
                            lhs: Id<Expr>(6),
                            rhs: Some(
                                Id<Expr>(5),
                            ),
                        },
                    ),
                    span: Span {
                        start: 28,
                        end: 39,
                    },
                },
                Stmt {
                    kind: Bind(
                        Bind {
                            sym: Id<Sym>(4),
                            lhs: Id<Expr>(8),
                            rhs: Some(
                                Id<Expr>(7),
                            ),
                        },
                    ),
                    span: Span {
                        start: 1,
                        end: 42,
                    },
                },
            ],
        ),
        exprs: Arena(
            [
                Expr {
                    kind: Literal(
                        Int(
                            55,
                        ),
                    ),
                    span: Span {
                        start: 20,
                        end: 22,
                    },
                },
                Expr {
                    kind: Ident(
                        Id<Sym>(2),
                    ),
                    span: Span {
                        start: 15,
                        end: 16,
                    },
                },
                Expr {
                    kind: Ident(
                        Id<Sym>(2),
                    ),
                    span: Span {
                        start: 33,
                        end: 34,
                    },
                },
                Expr {
                    kind: Ident(
                        Id<Sym>(2),
                    ),
                    span: Span {
                        start: 37,
                        end: 38,
                    },
                },
                Expr {
                    kind: Binary {
                        lhs: Id<Expr>(3),
                        op: Add,
                        rhs: Id<Expr>(4),
                    },
                    span: Span {
                        start: 33,
                        end: 38,
                    },
                },
                Expr {
                    kind: Ident(
                        Id<Sym>(3),
                    ),
                    span: Span {
                        start: 28,
                        end: 29,
                    },
                },
                Expr {
                    kind: Block(
                        [
                            Id<Stmt>(1),
                            Id<Stmt>(2),
                        ],
                    ),
                    span: Span {
                        start: 9,
                        end: 41,
                    },
                },
                Expr {
                    kind: Ident(
                        Id<Sym>(4),
                    ),
                    span: Span {
                        start: 1,
                        end: 2,
                    },
                },
            ],
        ),
        symbols: Arena(
            [
                Sym {
                    kind: Type(
                        Some(
                            Id<Type>(1),
                        ),
                    ),
                },
                Sym {
                    kind: Infer,
                },
                Sym {
                    kind: Infer,
                },
                Sym {
                    kind: Fn {
                        params: [],
                    },
                },
            ],
        ),
        types: Arena(
            [
                Type,
                Type,
                Type,
            ],
        ),
        builtins: Builtins {
            i32: Id<Type>(1),
            f32: Id<Type>(2),
            bool: Id<Type>(3),
        },
    },
    Arena(
        [],
    ),
)
