pom-sema/src/lowering/snapshots/invalid_fn_scopes-2.snap
---
source: pom-sema/src/lowering/tests.rs
expression: "test(r#\"\na: fn (b: i32) = {\n    c := b + b;\n};\n\nd := b;\ne := c;\n\"#)"
---
(
    Ir {
        items: [
            Id<Stmt>(2),
            Id<Stmt>(3),
            Id<Stmt>(4),
        ],
        stmts: Arena(
            [
                Stmt {
                    kind: Bind(
                        Bind {
                            sym: Id<Sym>(5),
                            lhs: Id<Expr>(6),
                            rhs: Some(
                                Id<Expr>(5),
                            ),
                        },
                    ),
                    span: Span {
                        start: 24,
                        end: 35,
                    },
                },
                Stmt {
                    kind: Bind(
                        Bind {
                            sym: Id<Sym>(6),
                            lhs: Id<Expr>(8),
                            rhs: Some(
                                Id<Expr>(7),
                            ),
                        },
                    ),
                    span: Span {
                        start: 1,
                        end: 38,
                    },
                },
                Stmt {
                    kind: Bind(
                        Bind {
                            sym: Id<Sym>(7),
                            lhs: Id<Expr>(10),
                            rhs: Some(
                                Id<Expr>(9),
                            ),
                        },
                    ),
                    span: Span {
                        start: 40,
                        end: 47,
                    },
                },
                Stmt {
                    kind: Bind(
                        Bind {
                            sym: Id<Sym>(8),
                            lhs: Id<Expr>(12),
                            rhs: Some(
                                Id<Expr>(11),
                            ),
                        },
                    ),
                    span: Span {
                        start: 48,
                        end: 55,
                    },
                },
            ],
        ),
        exprs: Arena(
            [
                Expr {
                    kind: Ident(
                        Id<Sym>(1),
                    ),
                    span: Span {
                        start: 11,
                        end: 14,
                    },
                },
                Expr {
                    kind: Ident(
                        Id<Sym>(4),
                    ),
                    span: Span {
                        start: 8,
                        end: 9,
                    },
                },
                Expr {
                    kind: Ident(
                        Id<Sym>(4),
                    ),
                    span: Span {
                        start: 29,
                        end: 30,
                    },
                },
                Expr {
                    kind: Ident(
                        Id<Sym>(4),
                    ),
                    span: Span {
                        start: 33,
                        end: 34,
                    },
                },
                Expr {
                    kind: Binary {
                        lhs: Id<Expr>(3),
                        op: Add,
                        rhs: Id<Expr>(4),
                    },
                    span: Span {
                        start: 29,
                        end: 34,
                    },
                },
                Expr {
                    kind: Ident(
                        Id<Sym>(5),
                    ),
                    span: Span {
                        start: 24,
                        end: 25,
                    },
                },
                Expr {
                    kind: Block(
                        [
                            Id<Stmt>(1),
                        ],
                    ),
                    span: Span {
                        start: 18,
                        end: 37,
                    },
                },
                Expr {
                    kind: Ident(
                        Id<Sym>(6),
                    ),
                    span: Span {
                        start: 1,
                        end: 2,
                    },
                },
                Expr {
                    kind: Invalid(
                        Id<Error>(1),
                    ),
                    span: Span {
                        start: 45,
                        end: 46,
                    },
                },
                Expr {
                    kind: Ident(
                        Id<Sym>(7),
                    ),
                    span: Span {
                        start: 40,
                        end: 41,
                    },
                },
                Expr {
                    kind: Invalid(
                        Id<Error>(2),
                    ),
                    span: Span {
                        start: 53,
                        end: 54,
                    },
                },
                Expr {
                    kind: Ident(
                        Id<Sym>(8),
                    ),
                    span: Span {
                        start: 48,
                        end: 49,
                    },
                },
            ],
        ),
        symbols: Arena(
            [
                Resolved(
                    Kind(
                        Type(
                            I32,
                        ),
                    ),
                ),
                Resolved(
                    Kind(
                        Type(
                            F32,
                        ),
                    ),
                ),
                Resolved(
                    Kind(
                        Type(
                            Bool,
                        ),
                    ),
                ),
                Compute(
                    Id<Expr>(1),
                ),
                Infer,
                Resolved(
                    Kind(
                        Fn(
                            FnSignature {
                                params: [
                                    Bind {
                                        sym: Id<Sym>(4),
                                        lhs: Id<Expr>(2),
                                        rhs: None,
                                    },
                                ],
                            },
                        ),
                    ),
                ),
                Infer,
                Infer,
            ],
        ),
    },
    Arena(
        [
            Error {
                kind: UnknownSymbol,
                span: Span {
                    start: 45,
                    end: 46,
                },
            },
            Error {
                kind: UnknownSymbol,
                span: Span {
                    start: 53,
                    end: 54,
                },
            },
        ],
    ),
)
