pom-sema/src/lowering/snapshots/invalid_fn_scopes.snap
---
source: pom-sema/src/lowering/tests.rs
expression: "test(r#\"\na: fn = {\n    b := 55;\n    c := b + b;\n};\n\nd := b;\ne := c;\n\"#)"
---
(
    Ir {
        items: [
            Id<Stmt>(3),
            Id<Stmt>(4),
            Id<Stmt>(5),
        ],
        stmts: Arena(
            [
                Stmt {
                    kind: Bind(
                        Bind {
                            sym: Id<Sym>(4),
                            lhs: Id<Expr>(2),
                            rhs: Some(
                                Id<Expr>(1),
                            ),
                        },
                    ),
                    span: Span {
                        start: 15,
                        end: 23,
                    },
                },
                Stmt {
                    kind: Bind(
                        Bind {
                            sym: Id<Sym>(5),
                            lhs: Id<Expr>(6),
                            rhs: Some(
                                Id<Expr>(5),
                            ),
                        },
                    ),
                    span: Span {
                        start: 28,
                        end: 39,
                    },
                },
                Stmt {
                    kind: Bind(
                        Bind {
                            sym: Id<Sym>(6),
                            lhs: Id<Expr>(8),
                            rhs: Some(
                                Id<Expr>(7),
                            ),
                        },
                    ),
                    span: Span {
                        start: 1,
                        end: 42,
                    },
                },
                Stmt {
                    kind: Bind(
                        Bind {
                            sym: Id<Sym>(7),
                            lhs: Id<Expr>(10),
                            rhs: Some(
                                Id<Expr>(9),
                            ),
                        },
                    ),
                    span: Span {
                        start: 44,
                        end: 51,
                    },
                },
                Stmt {
                    kind: Bind(
                        Bind {
                            sym: Id<Sym>(8),
                            lhs: Id<Expr>(12),
                            rhs: Some(
                                Id<Expr>(11),
                            ),
                        },
                    ),
                    span: Span {
                        start: 52,
                        end: 59,
                    },
                },
            ],
        ),
        exprs: Arena(
            [
                Expr {
                    kind: Literal(
                        Int(
                            55,
                        ),
                    ),
                    span: Span {
                        start: 20,
                        end: 22,
                    },
                },
                Expr {
                    kind: Ident(
                        Id<Sym>(4),
                    ),
                    span: Span {
                        start: 15,
                        end: 16,
                    },
                },
                Expr {
                    kind: Ident(
                        Id<Sym>(4),
                    ),
                    span: Span {
                        start: 33,
                        end: 34,
                    },
                },
                Expr {
                    kind: Ident(
                        Id<Sym>(4),
                    ),
                    span: Span {
                        start: 37,
                        end: 38,
                    },
                },
                Expr {
                    kind: Binary {
                        lhs: Id<Expr>(3),
                        op: Add,
                        rhs: Id<Expr>(4),
                    },
                    span: Span {
                        start: 33,
                        end: 38,
                    },
                },
                Expr {
                    kind: Ident(
                        Id<Sym>(5),
                    ),
                    span: Span {
                        start: 28,
                        end: 29,
                    },
                },
                Expr {
                    kind: Block(
                        [
                            Id<Stmt>(1),
                            Id<Stmt>(2),
                        ],
                    ),
                    span: Span {
                        start: 9,
                        end: 41,
                    },
                },
                Expr {
                    kind: Ident(
                        Id<Sym>(6),
                    ),
                    span: Span {
                        start: 1,
                        end: 2,
                    },
                },
                Expr {
                    kind: Invalid(
                        Id<Error>(1),
                    ),
                    span: Span {
                        start: 49,
                        end: 50,
                    },
                },
                Expr {
                    kind: Ident(
                        Id<Sym>(7),
                    ),
                    span: Span {
                        start: 44,
                        end: 45,
                    },
                },
                Expr {
                    kind: Invalid(
                        Id<Error>(2),
                    ),
                    span: Span {
                        start: 57,
                        end: 58,
                    },
                },
                Expr {
                    kind: Ident(
                        Id<Sym>(8),
                    ),
                    span: Span {
                        start: 52,
                        end: 53,
                    },
                },
            ],
        ),
        symbols: Arena(
            [
                Resolved(
                    Kind(
                        Type(
                            I32,
                        ),
                    ),
                ),
                Resolved(
                    Kind(
                        Type(
                            F32,
                        ),
                    ),
                ),
                Resolved(
                    Kind(
                        Type(
                            Bool,
                        ),
                    ),
                ),
                Infer,
                Infer,
                Resolved(
                    Kind(
                        Fn(
                            FnSignature {
                                params: [],
                            },
                        ),
                    ),
                ),
                Infer,
                Infer,
            ],
        ),
    },
    Arena(
        [
            Error {
                kind: UnknownSymbol,
                span: Span {
                    start: 49,
                    end: 50,
                },
            },
            Error {
                kind: UnknownSymbol,
                span: Span {
                    start: 57,
                    end: 58,
                },
            },
        ],
    ),
)
