pom-sema/src/lowering/snapshots/scopes-2.snap
---
source: pom-sema/src/lowering/tests.rs
expression: "test(r#\"\n{\n    a := 55;\n    b := a + a;\n}\na := 55;\n\"#)"
---
(
    Ir {
        items: [
            Id<Stmt>(3),
            Id<Stmt>(4),
        ],
        stmts: Arena(
            [
                Stmt {
                    kind: Bind(
                        Bind {
                            sym: Id<Sym>(2),
                            lhs: Id<Expr>(2),
                            rhs: Some(
                                Id<Expr>(1),
                            ),
                        },
                    ),
                    span: Span {
                        start: 7,
                        end: 15,
                    },
                },
                Stmt {
                    kind: Bind(
                        Bind {
                            sym: Id<Sym>(3),
                            lhs: Id<Expr>(6),
                            rhs: Some(
                                Id<Expr>(5),
                            ),
                        },
                    ),
                    span: Span {
                        start: 20,
                        end: 31,
                    },
                },
                Stmt {
                    kind: Block(
                        [
                            Id<Stmt>(1),
                            Id<Stmt>(2),
                        ],
                    ),
                    span: Span {
                        start: 1,
                        end: 33,
                    },
                },
                Stmt {
                    kind: Bind(
                        Bind {
                            sym: Id<Sym>(4),
                            lhs: Id<Expr>(8),
                            rhs: Some(
                                Id<Expr>(7),
                            ),
                        },
                    ),
                    span: Span {
                        start: 34,
                        end: 42,
                    },
                },
            ],
        ),
        exprs: Arena(
            [
                Expr {
                    kind: Literal(
                        Int(
                            55,
                        ),
                    ),
                    span: Span {
                        start: 12,
                        end: 14,
                    },
                },
                Expr {
                    kind: Ident(
                        Id<Sym>(2),
                    ),
                    span: Span {
                        start: 7,
                        end: 8,
                    },
                },
                Expr {
                    kind: Ident(
                        Id<Sym>(2),
                    ),
                    span: Span {
                        start: 25,
                        end: 26,
                    },
                },
                Expr {
                    kind: Ident(
                        Id<Sym>(2),
                    ),
                    span: Span {
                        start: 29,
                        end: 30,
                    },
                },
                Expr {
                    kind: Binary {
                        lhs: Id<Expr>(3),
                        op: Add,
                        rhs: Id<Expr>(4),
                    },
                    span: Span {
                        start: 25,
                        end: 30,
                    },
                },
                Expr {
                    kind: Ident(
                        Id<Sym>(3),
                    ),
                    span: Span {
                        start: 20,
                        end: 21,
                    },
                },
                Expr {
                    kind: Literal(
                        Int(
                            55,
                        ),
                    ),
                    span: Span {
                        start: 39,
                        end: 41,
                    },
                },
                Expr {
                    kind: Ident(
                        Id<Sym>(4),
                    ),
                    span: Span {
                        start: 34,
                        end: 35,
                    },
                },
            ],
        ),
        symbols: Arena(
            [
                Sym {
                    kind: Type(
                        Some(
                            Id<Type>(1),
                        ),
                    ),
                },
                Sym {
                    kind: Infer,
                },
                Sym {
                    kind: Infer,
                },
                Sym {
                    kind: Infer,
                },
            ],
        ),
        types: Arena(
            [
                Type,
                Type,
                Type,
            ],
        ),
        builtins: Builtins {
            i32: Id<Type>(1),
            f32: Id<Type>(2),
            bool: Id<Type>(3),
        },
    },
    Arena(
        [],
    ),
)
