pom-sema/src/lowering/snapshots/scopes.snap
---
source: pom-sema/src/lowering/tests.rs
expression: "test(r#\"\na := 55;\nb := a + a;\n\"#)"
---
(
    Ir {
        items: [
            Id<Stmt>(1),
            Id<Stmt>(2),
        ],
        stmts: Arena(
            [
                Stmt {
                    kind: Bind(
                        Bind {
                            sym: Id<Sym>(4),
                            lhs: Id<Expr>(2),
                            rhs: Some(
                                Id<Expr>(1),
                            ),
                        },
                    ),
                    span: Span {
                        start: 1,
                        end: 9,
                    },
                },
                Stmt {
                    kind: Bind(
                        Bind {
                            sym: Id<Sym>(5),
                            lhs: Id<Expr>(6),
                            rhs: Some(
                                Id<Expr>(5),
                            ),
                        },
                    ),
                    span: Span {
                        start: 10,
                        end: 21,
                    },
                },
            ],
        ),
        exprs: Arena(
            [
                Expr {
                    kind: Literal(
                        Int(
                            55,
                        ),
                    ),
                    span: Span {
                        start: 6,
                        end: 8,
                    },
                },
                Expr {
                    kind: Ident(
                        Id<Sym>(4),
                    ),
                    span: Span {
                        start: 1,
                        end: 2,
                    },
                },
                Expr {
                    kind: Ident(
                        Id<Sym>(4),
                    ),
                    span: Span {
                        start: 15,
                        end: 16,
                    },
                },
                Expr {
                    kind: Ident(
                        Id<Sym>(4),
                    ),
                    span: Span {
                        start: 19,
                        end: 20,
                    },
                },
                Expr {
                    kind: Binary {
                        lhs: Id<Expr>(3),
                        op: Add,
                        rhs: Id<Expr>(4),
                    },
                    span: Span {
                        start: 15,
                        end: 20,
                    },
                },
                Expr {
                    kind: Ident(
                        Id<Sym>(5),
                    ),
                    span: Span {
                        start: 10,
                        end: 11,
                    },
                },
            ],
        ),
        symbols: Arena(
            [
                Resolved(
                    Kind(
                        Type(
                            I32,
                        ),
                    ),
                ),
                Resolved(
                    Kind(
                        Type(
                            F32,
                        ),
                    ),
                ),
                Resolved(
                    Kind(
                        Type(
                            Bool,
                        ),
                    ),
                ),
                Infer,
                Infer,
            ],
        ),
    },
    Arena(
        [],
    ),
)
